--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -483,6 +483,14 @@
     "message": "Ochrana před malwarem, bezpečnost",
     "description": "Filter lists section name"
   },
+  "3pGroupSocial": {
+    "message": "Social widgets",
+    "description": "Filter lists section name"
+  },
+  "3pGroupCookies": {
+    "message": "Cookie notices",
+    "description": "Filter lists section name"
+  },
   "3pGroupAnnoyances": {
     "message": "Dotěrnosti",
     "description": "Filter lists section name"
