--- a/src/_locales/es/messages.json
+++ b/src/_locales/es/messages.json
@@ -483,6 +483,14 @@
     "message": "Protección de malware, seguridad",
     "description": "Filter lists section name"
   },
+  "3pGroupSocial": {
+    "message": "Social widgets",
+    "description": "Filter lists section name"
+  },
+  "3pGroupCookies": {
+    "message": "Cookie notices",
+    "description": "Filter lists section name"
+  },
   "3pGroupAnnoyances": {
     "message": "Elementos molestos",
     "description": "Filter lists section name"
