--- a/src/_locales/gl/messages.json
+++ b/src/_locales/gl/messages.json
@@ -483,6 +483,14 @@
     "message": "Dominios de <i>malware</i>",
     "description": "Filter lists section name"
   },
+  "3pGroupSocial": {
+    "message": "Social widgets",
+    "description": "Filter lists section name"
+  },
+  "3pGroupCookies": {
+    "message": "Cookie notices",
+    "description": "Filter lists section name"
+  },
   "3pGroupAnnoyances": {
     "message": "Molestias",
     "description": "Filter lists section name"
