--- a/src/_locales/pl/messages.json
+++ b/src/_locales/pl/messages.json
@@ -483,6 +483,14 @@
     "message": "Ochrona przed złośliwym oprogramowaniem, bezpieczeństwo",
     "description": "Filter lists section name"
   },
+  "3pGroupSocial": {
+    "message": "Social widgets",
+    "description": "Filter lists section name"
+  },
+  "3pGroupCookies": {
+    "message": "Cookie notices",
+    "description": "Filter lists section name"
+  },
   "3pGroupAnnoyances": {
     "message": "Elementy irytujące",
     "description": "Filter lists section name"
