--- a/src/_locales/tr/messages.json
+++ b/src/_locales/tr/messages.json
@@ -483,6 +483,14 @@
     "message": "Zararlı alan adları",
     "description": "Filter lists section name"
   },
+  "3pGroupSocial": {
+    "message": "Social widgets",
+    "description": "Filter lists section name"
+  },
+  "3pGroupCookies": {
+    "message": "Cookie notices",
+    "description": "Filter lists section name"
+  },
   "3pGroupAnnoyances": {
     "message": "Can sıkıcı ögeler",
     "description": "Filter lists section name"
