--- a/src/_locales/vi/messages.json
+++ b/src/_locales/vi/messages.json
@@ -483,6 +483,14 @@
     "message": "Bảo mật, bảo vệ khỏi phần mềm nguy hiểm",
     "description": "Filter lists section name"
   },
+  "3pGroupSocial": {
+    "message": "Social widgets",
+    "description": "Filter lists section name"
+  },
+  "3pGroupCookies": {
+    "message": "Cookie notices",
+    "description": "Filter lists section name"
+  },
   "3pGroupAnnoyances": {
     "message": "Phiền toái",
     "description": "Filter lists section name"
