Import translation work from https://crowdin.com/project/ublock

--- a/src/_locales/ar/messages.json
+++ b/src/_locales/ar/messages.json
@@ -488,7 +488,7 @@
     "description": "Filter lists section name"
   },
   "3pGroupCookies": {
-    "message": "Cookie notices",
+    "message": "اشعارات ملفات تعريف الارتباط",
     "description": "Filter lists section name"
   },
   "3pGroupAnnoyances": {
