--- a/src/_locales/be/messages.json
+++ b/src/_locales/be/messages.json
@@ -484,11 +484,11 @@
     "description": "Filter lists section name"
   },
   "3pGroupSocial": {
-    "message": "Social widgets",
+    "message": "Віджэты сацыяльных сетак",
     "description": "Filter lists section name"
   },
   "3pGroupCookies": {
-    "message": "Cookie notices",
+    "message": "Абвесткі пра кукі",
     "description": "Filter lists section name"
   },
   "3pGroupAnnoyances": {
