--- a/src/_locales/bg/messages.json
+++ b/src/_locales/bg/messages.json
@@ -484,11 +484,11 @@
     "description": "Filter lists section name"
   },
   "3pGroupSocial": {
-    "message": "Social widgets",
+    "message": "Социални джаджи",
     "description": "Filter lists section name"
   },
   "3pGroupCookies": {
-    "message": "Cookie notices",
+    "message": "Известия за бисквитки",
     "description": "Filter lists section name"
   },
   "3pGroupAnnoyances": {
