--- a/src/_locales/da/messages.json
+++ b/src/_locales/da/messages.json
@@ -484,11 +484,11 @@
     "description": "Filter lists section name"
   },
   "3pGroupSocial": {
-    "message": "Social widgets",
+    "message": "Sociale widgets",
     "description": "Filter lists section name"
   },
   "3pGroupCookies": {
-    "message": "Cookie notices",
+    "message": "Cookie-meddelelser",
     "description": "Filter lists section name"
   },
   "3pGroupAnnoyances": {
