--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -484,11 +484,11 @@
     "description": "Filter lists section name"
   },
   "3pGroupSocial": {
-    "message": "Social widgets",
+    "message": "Widgets de réseaux sociaux",
     "description": "Filter lists section name"
   },
   "3pGroupCookies": {
-    "message": "Cookie notices",
+    "message": "Bannières de cookie",
     "description": "Filter lists section name"
   },
   "3pGroupAnnoyances": {
