--- a/src/_locales/hr/messages.json
+++ b/src/_locales/hr/messages.json
@@ -484,11 +484,11 @@
     "description": "Filter lists section name"
   },
   "3pGroupSocial": {
-    "message": "Social widgets",
+    "message": "Socijalni widgeti",
     "description": "Filter lists section name"
   },
   "3pGroupCookies": {
-    "message": "Cookie notices",
+    "message": "Obavijest o kolačićima",
     "description": "Filter lists section name"
   },
   "3pGroupAnnoyances": {
