--- a/src/_locales/it/messages.json
+++ b/src/_locales/it/messages.json
@@ -484,11 +484,11 @@
     "description": "Filter lists section name"
   },
   "3pGroupSocial": {
-    "message": "Social widgets",
+    "message": "Widget sociali",
     "description": "Filter lists section name"
   },
   "3pGroupCookies": {
-    "message": "Cookie notices",
+    "message": "Avviso sui cookie",
     "description": "Filter lists section name"
   },
   "3pGroupAnnoyances": {
