--- a/src/_locales/pl/messages.json
+++ b/src/_locales/pl/messages.json
@@ -484,11 +484,11 @@
     "description": "Filter lists section name"
   },
   "3pGroupSocial": {
-    "message": "Social widgets",
+    "message": "Widżety społecznościowe",
     "description": "Filter lists section name"
   },
   "3pGroupCookies": {
-    "message": "Cookie notices",
+    "message": "Powiadomienia o ciasteczkach",
     "description": "Filter lists section name"
   },
   "3pGroupAnnoyances": {
