--- a/src/_locales/sr/messages.json
+++ b/src/_locales/sr/messages.json
@@ -484,11 +484,11 @@
     "description": "Filter lists section name"
   },
   "3pGroupSocial": {
-    "message": "Social widgets",
+    "message": "Друштвени виџети",
     "description": "Filter lists section name"
   },
   "3pGroupCookies": {
-    "message": "Cookie notices",
+    "message": "Обавештења о колачићима",
     "description": "Filter lists section name"
   },
   "3pGroupAnnoyances": {
