Import translation work from https://crowdin.com/project/ublock

--- a/src/_locales/hi/messages.json
+++ b/src/_locales/hi/messages.json
@@ -484,11 +484,11 @@
     "description": "Filter lists section name"
   },
   "3pGroupSocial": {
-    "message": "Social widgets",
+    "message": "सोशल विज़ेट्स",
     "description": "Filter lists section name"
   },
   "3pGroupCookies": {
-    "message": "Cookie notices",
+    "message": "कुकी सूचनाएं",
     "description": "Filter lists section name"
   },
   "3pGroupAnnoyances": {
