--- a/src/_locales/uk/messages.json
+++ b/src/_locales/uk/messages.json
@@ -484,11 +484,11 @@
     "description": "Filter lists section name"
   },
   "3pGroupSocial": {
-    "message": "Social widgets",
+    "message": "Віджети соціальних мереж",
     "description": "Filter lists section name"
   },
   "3pGroupCookies": {
-    "message": "Cookie notices",
+    "message": "Повідомлення про файли cookie",
     "description": "Filter lists section name"
   },
   "3pGroupAnnoyances": {
