--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -484,11 +484,11 @@
     "description": "Filter lists section name"
   },
   "3pGroupSocial": {
-    "message": "Social widgets",
+    "message": "Soziale Widgets",
     "description": "Filter lists section name"
   },
   "3pGroupCookies": {
-    "message": "Cookie notices",
+    "message": "Cookie-Hinweise",
     "description": "Filter lists section name"
   },
   "3pGroupAnnoyances": {
