--- a/src/_locales/he/messages.json
+++ b/src/_locales/he/messages.json
@@ -484,11 +484,11 @@
     "description": "Filter lists section name"
   },
   "3pGroupSocial": {
-    "message": "Social widgets",
+    "message": "יישומונים חברתיים",
     "description": "Filter lists section name"
   },
   "3pGroupCookies": {
-    "message": "Cookie notices",
+    "message": "הודעות בקשר לעוגיות",
     "description": "Filter lists section name"
   },
   "3pGroupAnnoyances": {
