--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -484,11 +484,11 @@
     "description": "Filter lists section name"
   },
   "3pGroupSocial": {
-    "message": "Social widgets",
+    "message": "SNS ウィジェット",
     "description": "Filter lists section name"
   },
   "3pGroupCookies": {
-    "message": "Cookie notices",
+    "message": "クッキー通知",
     "description": "Filter lists section name"
   },
   "3pGroupAnnoyances": {
