--- a/src/_locales/lv/messages.json
+++ b/src/_locales/lv/messages.json
@@ -484,11 +484,11 @@
     "description": "Filter lists section name"
   },
   "3pGroupSocial": {
-    "message": "Social widgets",
+    "message": "Sabiedriskās ekrānvadīklas",
     "description": "Filter lists section name"
   },
   "3pGroupCookies": {
-    "message": "Cookie notices",
+    "message": "Sīkdatņu paziņojumi",
     "description": "Filter lists section name"
   },
   "3pGroupAnnoyances": {
