--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -484,11 +484,11 @@
     "description": "Filter lists section name"
   },
   "3pGroupSocial": {
-    "message": "Social widgets",
+    "message": "Виджеты соцсетей",
     "description": "Filter lists section name"
   },
   "3pGroupCookies": {
-    "message": "Cookie notices",
+    "message": "Уведомления о файлах куки",
     "description": "Filter lists section name"
   },
   "3pGroupAnnoyances": {
