--- a/src/_locales/sk/messages.json
+++ b/src/_locales/sk/messages.json
@@ -484,11 +484,11 @@
     "description": "Filter lists section name"
   },
   "3pGroupSocial": {
-    "message": "Social widgets",
+    "message": "Sociálne widgety",
     "description": "Filter lists section name"
   },
   "3pGroupCookies": {
-    "message": "Cookie notices",
+    "message": "Oznámenie o cookies",
     "description": "Filter lists section name"
   },
   "3pGroupAnnoyances": {
