--- a/src/_locales/tr/messages.json
+++ b/src/_locales/tr/messages.json
@@ -484,11 +484,11 @@
     "description": "Filter lists section name"
   },
   "3pGroupSocial": {
-    "message": "Social widgets",
+    "message": "Sosyal gereçler",
     "description": "Filter lists section name"
   },
   "3pGroupCookies": {
-    "message": "Cookie notices",
+    "message": "Çerez bildirimleri",
     "description": "Filter lists section name"
   },
   "3pGroupAnnoyances": {
