Import translation work from https://crowdin.com/project/ublock

--- a/src/_locales/hu/messages.json
+++ b/src/_locales/hu/messages.json
@@ -488,7 +488,7 @@
     "description": "Filter lists section name"
   },
   "3pGroupCookies": {
-    "message": "Cookie értesítések",
+    "message": "Sütiértesítések",
     "description": "Filter lists section name"
   },
   "3pGroupAnnoyances": {
