--- a/src/_locales/nb/messages.json
+++ b/src/_locales/nb/messages.json
@@ -484,11 +484,11 @@
     "description": "Filter lists section name"
   },
   "3pGroupSocial": {
-    "message": "Social widgets",
+    "message": "Sosiale medie-widgeter",
     "description": "Filter lists section name"
   },
   "3pGroupCookies": {
-    "message": "Cookie notices",
+    "message": "Cookie meldinger",
     "description": "Filter lists section name"
   },
   "3pGroupAnnoyances": {
