--- a/src/_locales/tr/messages.json
+++ b/src/_locales/tr/messages.json
@@ -592,7 +592,7 @@
     "description": ""
   },
   "rulesExport": {
-    "message": "Dosyaya aktar",
+    "message": "Dosyaya aktar…",
     "description": "Button in the 'My rules' pane"
   },
   "rulesDefaultFileName": {
