--- a/src/_locales/es/messages.json
+++ b/src/_locales/es/messages.json
@@ -484,11 +484,11 @@
     "description": "Filter lists section name"
   },
   "3pGroupSocial": {
-    "message": "Artilugios sociales",
+    "message": "Dispositivos sociales",
     "description": "Filter lists section name"
   },
   "3pGroupCookies": {
-    "message": "Avisos de cookies",
+    "message": "Avisos de cookie's",
     "description": "Filter lists section name"
   },
   "3pGroupAnnoyances": {
